feat: logo and animations on login and register pages added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       rel="icon"
       type="image/x-icon"
       sizes="32x32"
-      href="./src/assets/favicon-32x32.png" />
+      href="/favicon-180x180.png" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
