--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/x-icon" sizes="32x32" href="/favicon-180x180.png" />
+  <link rel="icon" type="image/x-icon" sizes="32x32"
+    href="https://res.cloudinary.com/dxirtcrxd/image/upload/v1676302286/favicon_dux939.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
